adds front end engineer posting and adds biseg to homepage

--- a/app/views/home/includes/_nedir.html.erb
+++ b/app/views/home/includes/_nedir.html.erb
@@ -44,8 +44,11 @@
         <a href="http://benvarim.com/kurum/cagdas-yasami-destekleme-dernegi" id="fc-cydd" class="fc-default" title="Çağdaş Yaşamı Destekleme Derneği">Çağdaş Yaşamı Destekleme Derneği</a>
         -->
         <a href="http://benvarim.com/kurum/turkish-educational-foundation-abd" id="fc-tef" class="fc-default" title="Turkish Educational Foundation">Turkish Educational Foundation</a>
-        <a href="/kurum/yeni" id="fc-item" class="fc-default" title="Yeni Vakıf ve Dernek Kaydı">Yeni Vakıf ve Dernek Kaydı</a>
+        <a href="https://www.benvarim.com/kurum/biseg-bir-insan-saglik-ve-egitim-koyleri-gonulluler-dernegi" id="fc-biseg" class="fc-default" title="BISEG - Bir İnsan Sağlık ve Eğitim Köyleri Derneği">BISEG - Bir İnsan Sağlık ve Eğitim Köyleri Derneği</a>
+
         <!--
+          <a href="/kurum/yeni" id="fc-item" class="fc-default" title="Yeni Vakıf ve Dernek Kaydı">Yeni Vakıf ve Dernek Kaydı</a>
+
           <a href="#" id="fc-tema" class="opaque" title="TEMA">TEMA</a>
           <a href="#" id="fc-iksv" class="opaque" title="IKSV">IKSV</a>
           <a href="#" id="fc-tegv" class="opaque" title="TEGV">TEGV</a>
