--- a/app/views/home/includes/_jobs.erb
+++ b/app/views/home/includes/_jobs.erb
@@ -124,6 +124,32 @@
   </ul>
 </div>
 
+
+
+
+FRONT-END ENGINEER - Stajyer
+Türkiye’de ve ABD’de kurulan bir start-up olan Benvarim.com'da web tabanlı sistem geliştirme konusunda tecrübeli, yeniliklere ve öğrenmeye açık, ürünün teknik kısmı kadar son kullanıcıya olan etkisini de düşünmeyi seven Front-End Engineer ekip arkadaşı arıyoruz. Adaylar, hali hazırda başka bir işte çalışıyor ise işlerinden ayrılmalarını beklemiyoruz. Çalışma saatlerimiz esnek olup, ofis ortamında çalışmıyoruz.
+
+BenVarım kurucuları, ekibe dahil olacak bayan veya erkek tüm adayların, yöneticilik becerisi, sosyal girişimcilik ve kariyer gelişimine önem verir ve kişisel gelişimlerini destekler. Yazılım ekibimizin önemli bir kısmı, ABD’nin Silikon Vadisi’nde yaşamaktadır. Ekibe dahil olacak adayın Silikon Vadisi’nde bağlantılar kurmasının ve Vadi’deki best-practice’leri öğrenmesinin önünü açmak için çabamız olacaktır.
+
+BAŞVURU
+
+Aranan niteliklere sahip adayların, kariyer@benvarim.com adresine, adayın özgeçmişi ile beraber kısa bir tanıtım mektubu yazıp yollamaları gerekmektedir. (Lütfen tanıtım mektubunuzda, pozisyonun sizi heyecanlandıran kısmı ve sizi diğer adaylardan ayıran özelliğinizi açıklayınız.)
+
+“OLMAZSA OLMAZ” NİTELİKLER
+
+Photoshop, Illustrator, Fireworks, Flash gibi programlarda tecrübesi olmak,
+Temel tasarım bilgisine sahip, tipografiye hakim olmak,
+HTML ve CSS ile daha önce çalışmış, HTML5 ve CSS3 gibi yeni teknolojileri öğrenmeye hevesli olmak,
+Ruby on Rails ve jQuery hakkında bilgi sahibi, tercihen çalışma geçmişi olmak,
+Kullanılabilirlik üzerine çalışmalar yapmış, en iyi tasarımın görünmez tasarım olduğunun bilincinde olmak
+En az bir üniversite kulübu veya sivil toplum kuruluşunda aktif olarak görev almış olmak
+İŞ TANIMI
+
+Yazılım, programlama veya tasarım konularında kurucular ile beraber çalışma,
+Benvarim.com projesinin Türkiye genelinde yayılmasını sağlamak üzere çeşitli fikirler üretip, icra etme.
+Yeni teknoloji ve iletişim fikirleri üzerine girişimcilik yapmak; kendi projelerinin hayata geçmesini sağlamak.
+
 <!--
 <div id="job-pazarlama-satis-direktoru" class="job">
   <a id="pazarlama-satis-direktoru"></a>
