--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -66,7 +66,7 @@
         </div>
 
         <div class="size3of4 lastUnit">
-            <%#= render 'organizations/includes/content'%>
+            <%= render 'organizations/includes/content'%>
         </div>
       </div><!-- .line -->
 
