--- a/app/views/pages/_list_pages_condensed.erb
+++ b/app/views/pages/_list_pages_condensed.erb
@@ -50,7 +50,7 @@
         <%=link_to "Tüm bağış sayfalarını görüntüle", all_pages_path, :class => "show-all" %>
       <% else %>
         <% if @organization %>
-          <%=link_to "Gönüllü ol, bağış sayfanı yarat!", new_page_for_organization_path(@organization), :class => "green button large" %>
+          <%=link_to "Sen de gönüllü ol, bağış sayfanı yarat!", new_page_for_organization_path(@organization), :class => "green button large" %>
         <% else %>
           <%=link_to "Gönüllü ol, bağış sayfanı yarat!", :new_page, :class => "button green large"%>
         <% end %>
