implements contact page and fixes profile link

--- a/app/views/contact_forms/_form.html.erb
+++ b/app/views/contact_forms/_form.html.erb
@@ -46,7 +46,7 @@
       <%= f.text_area :other %>
     </div>
     <div class="actions">
-      <%= f.submit "Gönder", :class=>"button yellow super button-primary", :style=>"margin-left:200px;width:120px" %>
+      <%= f.submit "Gönder", :class=>"button yellow large button-primary", :style=>"margin-left:80px;width:120px" %>
     </div>
   </div>
 <% end %>
