--- a/app/views/organizations/includes/_share_options.erb
+++ b/app/views/organizations/includes/_share_options.erb
@@ -13,7 +13,7 @@ twitter_text = "Benvarım!" unless defined?(twitter_text)
         href="https://twitter.com/share"
         class="twitter-share-button"
         data-url="<%= url %>"
-        data-text="<%= text %>"
+        data-text="<%= twitter_text %>"
         data-via="ben_varim"
         data-lang="tr"
         data-size="large"
