--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -8,7 +8,7 @@
 
 
 
-      <div class="profile clearfix dialog-trigger" id="p-levent" data-dialog="#dialog-lb">
+      <div class="profile clearfix">
         <div class="profile_pic clearfix">
           <div class="_pm_container">
             <div class="_pm_shadow r"></div>
