--- a/app/views/contact_forms/new.html.erb
+++ b/app/views/contact_forms/new.html.erb
@@ -1,25 +1,37 @@
-<div id="main-content">
+<div class="one-column">
   <div class="widget widget-light" id="w-iletisim">
     <div class="w-inner">
       <div class="w-title">İletişim</div>
+        <p style="font-size:16px">Her türlü öneri, istek ve şikayetlerinizi bize bildirmekten lütfen çekinmeyin. Gönderdiğiniz mesajlar en geç 24 saat içinde yanıtlanacaktır.</p>
+        <br/>
         <%= render 'form' %>
+
+        <div class="separator"></div>
+
+        <table id="info_table">
+          <tr><td><strong>Posta adresi:</strong></td><td>Ahmet Cevdet Paşa Sk, Polat Çamlık Sitesi A Blok No:7 D:9 - Bostancı, İstanbul</td></tr>
+          <tr><td><strong>E-posta:</strong></td><td>iletisim@benvarim.com</td></tr>
+          <tr><td><strong>Telefon:</strong></td><td>0(216) 373-9031</td></tr>
+        </table>
     </div>
   </div>
 
 
-    <table style="color:white; font-size:10px;" id="info_table">
-      <tr><td>Posta adresi:</td><td>957A Oak St, San Francisco, CA 94117, ABD</td></tr>
-      <tr><td>E-posta:</td><td>iletisim@benvarim.com</td></tr>
-      <tr><td>Telefon (TR):</td><td>+90 (532) 644-0432</td></tr>
-      <tr><td>Telefon (ABD):</td><td>+1 (415) 565-9166</td></tr>
-    </table>
 
 
 
 </div>
 <style>
+p {
+  padding: 10px 0;
+}
+.separator {
+  margin: 30px 0;
+}
+.one-column .w-title {
+  margin-bottom: 20px;
+}
 #info_table td {
-  padding:5px;
+  padding: 5px 5px 5px 0;
 }
 </style>
-<%= render 'layouts/sidebar'%>
