--- a/app/views/home/includes/_nedir.html.erb
+++ b/app/views/home/includes/_nedir.html.erb
@@ -44,7 +44,7 @@
         <a href="https://www.benvarim.com/kurum/cagdas-yasami-destekleme-dernegi" id="fc-cydd" class="fc-default" title="Çağdaş Yaşamı Destekleme Derneği">Çağdaş Yaşamı Destekleme Derneği</a>
         -->
 
-        <a href="http://benvarim.com/kurum/turkish-educational-foundation-abd" id="fc-tef" class="fc-default" title="Turkish Educational Foundation">Turkish Educational Foundation</a>
+        <a href="https://benvarim.com/kurum/turkish-educational-foundation-abd" id="fc-tef" class="fc-default" title="Turkish Educational Foundation">Turkish Educational Foundation</a>
         <a href="https://www.benvarim.com/kurum/biseg-bir-insan-saglik-ve-egitim-koyleri-gonulluler-dernegi" id="fc-biseg" class="fc-default" title="BISEG - Bir İnsan Sağlık ve Eğitim Köyleri Derneği">BISEG - Bir İnsan Sağlık ve Eğitim Köyleri Derneği</a>
 
         <!--
