--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
 <head>
 
   <!-- TypeKit - Styla -->
-  <script type="text/javascript" src="http://use.typekit.com/tza2afe.js"></script>
+  <script type="text/javascript" src="https://use.typekit.com/tza2afe.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
   <!-- http://code.google.com/apis/analytics/docs/tracking/asyncUsageGuide.html#SplitSnippet -->
