--- a/app/views/organizations/includes/_content.html.erb
+++ b/app/views/organizations/includes/_content.html.erb
@@ -34,7 +34,7 @@
            :pages => @top_pages,
            :link_to_pages => false
          }%>
-       <% else %>
+       <% elsif @organization.can_be_donated? %>
         <p><%= @organization.name %> adına henüz hiç bağış sayfası oluşturulmadı. Gönüllü ol, ilk bağış sayfasını yarat!</p>
         <%=link_to "Bağış sayfanı yarat", new_page_for_organization_path(@organization), :class => " button" %>
 
