--- a/app/views/pages/_list_pages.html.erb
+++ b/app/views/pages/_list_pages.html.erb
@@ -6,7 +6,15 @@
       <div class="rows-container clearfix" id="donation-pages-container">
         <% @pages.each do |page| %>
           <div class="row clearfix">
-            <div class="row-photo clearfix"><%= image_tag page.logo.url(:thumb) %></div>
+            <div class="row-photo clearfix">
+              <%= image_tag page.user.photo.url(:thumb)%>
+
+              <%= image_tag page.logo.url(:thumb) %>
+
+              <div class="org-proj-container">
+                <%= image_tag page.organization.logo.url(:thumb) %>
+              </div>
+            </div>
             <div class="row-details">
               <h1><%= link_to page.title, page %></h1>
               <p><%= link_to page.organization.name, page.organization %> &raquo; <%= link_to page.project.name, page.project %>  &raquo; <%= link_to page.user.name, page.user %></p>
