--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -61,7 +61,7 @@
         <div class="progress-bar-container clearfix">
 
           <div class="progress-bar rc clearfix">
-            <div class="pb-value rc" style="width: <%=@page.collect_ratio_str%>%;">
+            <div class="pb-value rc" data-width="<%=@page.collect_ratio_str%>">
               <div class="pb-reflection rc"></div>
               <div class="pb-hedef">HEDEF: <b><%= @page.goal_str %> TL</b></div>
               <div class="pb-toplanan">
