--- a/app/views/pages/_share_options.erb
+++ b/app/views/pages/_share_options.erb
@@ -4,7 +4,7 @@
 
 <div class="share-options">
   <h3>Paylaşarak Destek Ol!</h3>
-  <ul class="clearfix">
+  <ul class="clearfix rc-bottom">
 
 
     <li>
@@ -32,5 +32,23 @@
       <span  class='st_email_vcount' displayText='Email'></span>
     </li>
 
+    <li>
+      <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+      <script type="IN/Share"  data-counter="top" data-title="Paylaş"></script>
+    </li>
+
+    <li>
+      <!-- Place this tag where you want the su badge to render -->
+      <su:badge layout="5"></su:badge>
+
+      <!-- Place this snippet wherever appropriate -->
+      <script type="text/javascript">
+        (function() {
+          var li = document.createElement('script'); li.type = 'text/javascript'; li.async = true;
+          li.src = 'https://platform.stumbleupon.com/1/widgets.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(li, s);
+        })();
+      </script>
+    </li>
   </ul>
 </div>
