modularize stats and pre-add tabs classes

--- a/app/views/home/includes/_faq.erb
+++ b/app/views/home/includes/_faq.erb
@@ -1,6 +1,6 @@
 
-<div id="tabs">
-	<ul>
+<div id="tabs" class="ui-tabs ui-widget ui-widget-content ui-corner-all">
+	<ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
 		<li><a href="#tabs-1">Genel sorular</a></li>
 		<li><a href="#tabs-2">Kurumlarla ilgili sorular</a></li>
 		<li><a href="#tabs-3">Gönüllülerle ilgili sorular</a></li>
