--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -14,7 +14,7 @@
             :link => @page.user
           }%>
 
- 
+
 
         <div class="related-organization">
           <h2>Desteklediği Kuruluş:</h2>
@@ -80,8 +80,8 @@
         </div>
 
         <div class="tabs-container">
-          <div id="tabs">
-          	<ul>
+          <div id="tabs" class="ui-tabs ui-widget ui-widget-content ui-corner-all">
+          	<ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
           		<li><a href="#destekleyenler">Destekleyenler</a></li>
           		<li><a href="#proje-detaylari">Proje Detayları</a></li>
           	</ul>
