--- a/app/views/organizations/includes/_content.html.erb
+++ b/app/views/organizations/includes/_content.html.erb
@@ -1,6 +1,6 @@
 <div class="tabs-container">
-  <div id="tabs">
-  	<ul>
+  <div id="tabs" class="ui-tabs ui-widget ui-widget-content ui-corner-all">
+  	<ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
   		<li><a href="#hakkinda">Hakkında</a></li>
   		<li><a href="#projeler">Projeler</a></li>
   		<li><a href="#bagis-sayfalari">Bağış Sayfaları</a></li>
