--- a/app/views/organizations/includes/_content.html.erb
+++ b/app/views/organizations/includes/_content.html.erb
@@ -3,7 +3,11 @@
   	<ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
   		<li><a href="#hakkinda">Hakkında</a></li>
   		<li><a href="#projeler">Projeler</a></li>
+
+  		<% if @top_pages.length > 0 %>
   		<li><a href="#bagis-sayfalari">Bağış Sayfaları</a></li>
+  		<% end%>
+
   	</ul>
 
   	<div id="hakkinda" class="clearfix">
@@ -25,8 +29,9 @@
 
     </div> <!-- end of #projeler -->
 
+    <% if @top_pages.length > 0 %>
     <div id="bagis-sayfalari" class="clearfix">
-      <% if @top_pages.length > 0 %>
+
        <%=render :partial => "pages/list_pages_condensed",
          :locals => {
            :generate_widget => false,
@@ -37,11 +42,8 @@
        <% elsif @organization.can_be_donated? %>
         <p><%= @organization.name %> adına henüz hiç bağış sayfası oluşturulmadı. Gönüllü ol, ilk bağış sayfasını yarat!</p>
         <%=link_to "Bağış sayfanı yarat", new_page_for_organization_path(@organization), :class => " button" %>
-
-       <% end %>
-
-    </div> <!-- end of #projeler -->
-
+    </div> <!-- end of #bagis-sayfalari -->
+    <% end %>
 
   </div>
 </div><!-- .tabs-container -->
