adds Bing Webmaster Tools verification metatag.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -60,6 +60,10 @@
   <%= stylesheet_link_tag "handheld" %>
   -->
 
+  <!-- Bing Webmaster Tools Verifications -->
+  <meta name="msvalidate.01" content="27D10EA18858EBEBCB444377B9058CB6" />
+
+
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
   <%= javascript_include_tag "libs/modernizr-1.6.min" %>
 
