--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -22,33 +22,12 @@
 
       <div id="org-summary" class="line">
 
-
         <div class="size1of4 org-logo">
           <%= image_tag @organization.logo.url(:thumb) %>
         </div>
         <div class="size3of4 lastUnit org-creds">
           <h1 class="org-name"><%= @organization.name %></h1>
-          <% if @organization.address %><p class="org-address"><strong>Adres:</strong> <%= @organization.address %></p><% end %>
-          <% if @organization.phone %><p class="org-address"><strong>Telefon:</strong> <%= @organization.phone %></p><% end %>
 
-          <%   if @organization.website %>
-            <p class="org-url outlink"><%=link_to "http://#{@organization.website}", "http://#{@organization.website}", :target => "_blank"%></p>
-          <% end %>
-
-
-
-
-          <!-- <% if @organization.facebook_url %>
-            <p class="org-url outlink">
-              <%=link_to "Facebook", "http://facebook.com/#{@organization.facebook_url}", :target => "_blank"%>
-            </p>
-          <% end %>
-
-          <% if @organization.twitter_handle %>
-            <p class="org-url outlink">
-              <%=link_to "Twitter", "http://twitter.com/#{@organization.twitter_handle}", :target => "_blank"%>
-            </p>
-          <% end %> -->
 
 
           <% if @organization.can_be_donated? %>
@@ -58,6 +37,7 @@
 
         </div>
       </div><!-- #org-summary -->
+
       <!-- <div class="separator"></div> -->
 
       <div class="line">
@@ -69,8 +49,6 @@
             <%= render 'organizations/includes/content'%>
         </div>
       </div><!-- .line -->
-
-
 
       <div class="fullcontent-left">
         <% if @reference %>
@@ -90,9 +68,84 @@
 </div><!-- end of #main-content -->
 
 
-<%= render "organizations/includes/dialog_support"%>
 
 
+
+
+
+
+<% if @support %>
+  <div class="dialog" id="dialog-post-support" title="<%= @organization.name %>'ni desteklediğin için teşekkürler!">
+    <!--
+      TODO(Yigit): decorator functiolara ihtiyacimiz var. Dilbilgisi olarak ekleri duzeltmemiz gerekli.
+      Buyuk unlu uyumuna da dikkat edebiliriz. En basit sekilde son harfine bakarak ı,i kalın, ince sesli olma durumuna göre hareket
+      edebiliriz.
+
+      ör: derneği, vakfı, projesi, vb.
+
+      function ekle(kelime, ek)
+    -->
+
+
+    <div class="d-header">
+      <div class="dh-title">
+
+        <div class="line">
+          <div class="size1of3">
+            <%= image_tag @organization.logo.url(:thumb) %>
+          </div>
+          <div class="size2of3 lastUnit">
+
+            <p>25,000 destekçiye ulaşmak için yardımına ihtiyacımız var.<br/>Lütfen paylaş.</p>
+
+            <%= support_path(@support.organization, @support.user, :only_path => false) %>
+            <!--
+              TODO(Yigit): 25,000 kisi yazmak yerine belirli esiklere ihtiyacimiz var. Kurumun o an kaç destekçisi varsa bundan %20 fazlasını hedef olarak göster. Böylece insanlara bu hedefe ulaşabilmenin ne kadar kolay olduğunu gösterip paylaşmalarını sağla.
+
+              Minimum olarak 1000 kişi hedef olsun.
+
+
+            -->
+
+            <div class="pb-container-small clearfix">
+              <div class="progress-bar rc clearfix pb-small">
+                <div class="pb-value rc" style="width: 85%;">
+                  <div class="pb-reflection rc"></div>
+                  <div class="pb-hedef">HEDEF: <b>25,000 Kişi</b></div>
+                  <div class="pb-toplanan">
+                      Toplam Destekçi: <b>23,457</b>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <%= render :partial => 'organizations/includes/share_options',
+                :locals => {
+                  :url => support_path(@support.organization, @support.user, :only_path => false),
+                  :text => "Ben destekledim, sıra sende! #{@organization.name}"
+                }%>
+
+          </div>
+        </div><!-- .line -->
+
+
+
+
+      </div>
+    </div><!-- .d-header -->
+    <div class="d-content ">
+
+      <div class="separator"></div>
+
+      <p><strong>Neden 25,000 destekçi gerekli?</strong></p>
+      <p>Şirketler, BenVarım platformu üzerinden sponsorluk anlaşması yapmadan önce insanların bu kuruma olan güvenini görmek istiyor. Size özel bu linki paylaşarak sevdiğiniz kurum için cebinizden hiç para çıkmadan destek toplayın.</p>
+
+    </div><!-- .d-content -->
+
+    <div class="d-footer">
+    </div><!-- .d-footer -->
+  </div><!-- .d-dialog -->
+<% end %>
 
 <% captured = capture do %>
   <script type="text/javascript">
