--- a/app/views/organizations/includes/_share_options.erb
+++ b/app/views/organizations/includes/_share_options.erb
@@ -1,37 +1,50 @@
 <div id="fb-root"></div>
-<%
-url = url_for(:only_path => false) unless defined?(url)
-twitter_text = "Benvarım!" unless defined?(twitter_text)
-%>
 
-<div class="share-options">
-  <ul class="clearfix">
+
+  <ul class="clearfix rc-bottom">
+
 
     <li>
-
-      <a
-        href="https://twitter.com/share"
-        class="twitter-share-button"
-        data-url="<%= url %>"
-        data-text="<%= twitter_text %>"
-        data-via="ben_varim"
-        data-lang="tr"
-        data-size="large"
-        data-count="none"
-        data-related="ben_varim">Tweetle</a>
+      <div class="fb-like" data-send="true" data-layout="box_count" data-show-faces="true"></div>
     </li>
 
 
-    <li style="margin-right: 10px">
-      <span class='st_email_hcount' displayText='Email'></span>
+    <li>
+      <a href="http://twitter.com/share?via=ben_varim"
+         class="twitter-share-button"
+         data-count="vertical"
+         data-text="<% if text %><%= text %><% else %><%= @page.title %><% end %>">Tweetle</a>
     </li>
 
 
-    <li style="width:60px; margin-right: 10px">
-      <g:plusone size="medium" href="<%=url%>"></g:plusone>
+
+    <li>
+      <!-- Place this tag where you want the +1 button to render -->
+      <g:plusone size="tall"></g:plusone>
+
     </li>
 
-    <li><a  target="_blank" name="fb_share" share_url="<%=url%>" type="button_count">Facebook'ta Paylaş</a></li>
 
+    <li>
+      <span  class='st_email_vcount' displayText='Email'></span>
+    </li>
+
+    <li>
+      <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+      <script type="IN/Share"  data-counter="top" data-title="Paylaş"></script>
+    </li>
+
+    <li>
+      <!-- Place this tag where you want the su badge to render -->
+      <su:badge layout="5"></su:badge>
+
+      <!-- Place this snippet wherever appropriate -->
+      <script type="text/javascript">
+        (function() {
+          var li = document.createElement('script'); li.type = 'text/javascript'; li.async = true;
+          li.src = 'https://platform.stumbleupon.com/1/widgets.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(li, s);
+        })();
+      </script>
+    </li>
   </ul>
-</div>
