--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -56,6 +56,9 @@
 
   <!-- CSS : implied media="all" -->
   <%= include_stylesheets :workspace, :media => 'all' %>
+  <% if requires_bootstrap? %>
+    <%= include_stylesheets :bootstrap, :media => 'all' %>
+  <% end %>
   <!-- Uncomment if you are specifically targeting less enabled mobile browsers
   <%= stylesheet_link_tag "handheld" %>
   -->
