user payment total, fundraised, desteke fixes

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -98,8 +98,14 @@ Bv.Config = {
 <script src="https://connect.facebook.net/tr_TR/all.js#xfbml=1"></script>
 <script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
 
-<script type="text/javascript" src="https://apis.google.com/js/plusone.js">
-  {lang: 'tr'}
+<!-- Place this tag after the last +1 button tag. -->
+<script type="text/javascript">
+  window.___gcfg = {lang: 'tr'};
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
 </script>
 <script src="/javascripts/fb.share.js"></script>
 <script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
