--- a/app/views/organizations/includes/_dialog_support.html.erb
+++ b/app/views/organizations/includes/_dialog_support.html.erb
@@ -20,8 +20,7 @@
 
 
             <p>25,000 destekçiye ulaşmak için yardımına ihtiyacımız var.<br/>Lütfen paylaş.</p>
-
-            <%= support_path(@support.organization, @support.user, :only_path => false) %>
+            <% url = support_path(@support.organization, @support.user, :only_path => false) %>
             <!--
               TODO(Yigit): 25,000 kisi yazmak yerine belirli esiklere ihtiyacimiz var. Kurumun o an kaç destekçisi varsa bundan %20 fazlasını hedef olarak göster. Böylece insanlara bu hedefe ulaşabilmenin ne kadar kolay olduğunu gösterip paylaşmalarını sağla.
 
@@ -42,9 +41,12 @@
 
             <p><i><%= @support.organization.name %></i></p>
 
+            <%=url%>
+
             <%= render :partial => 'organizations/includes/share_options',
                 :locals => {
-                  :text => "Ben destekledim, sıra sende! #{@organization.name}"
+                  :text => "Ben destekledim, sıra sende! #{@organization.name}",
+                  :url => url
                 }
             %>
 
