--- a/app/views/organizations/includes/_share_options.erb
+++ b/app/views/organizations/includes/_share_options.erb
@@ -5,22 +5,46 @@
 
 
     <li>
-      <div class="fb-like" data-send="true" data-layout="box_count" data-show-faces="true"></div>
+      <div class="fb-like" data-send="true"
+      data-show-faces="true"
+      <% if defined? url %>
+        data-href="<%=url%>"
+        data-layout="standard"
+      <% else %>
+        data-layout="box_count"
+      <% end %>
+
+      ></div>
     </li>
 
 
     <li>
-      <a href="http://twitter.com/share?via=ben_varim"
+      <a href="http://twitter.com/share"
          class="twitter-share-button"
-         data-count="vertical"
-         data-text="<% if text %><%= text %><% else %><%= @page.title %><% end %>">Tweetle</a>
+         <% if defined? url%>
+          data-url="<%=url%>"
+          data-count="none"
+         <% else %>
+          data-count="vertical"
+         <% end %>
+         data-lang="tr"
+         data-related="ben_varim"
+         data-hashtags="benvarim"
+         data-text="<% if(defined? text && text) %><%= text %><% else %><%= @page.title %><% end %>">Tweetle</a>
     </li>
 
 
 
     <li>
       <!-- Place this tag where you want the +1 button to render -->
-      <g:plusone size="tall"></g:plusone>
+      <g:plusone size="tall"
+      <% if defined? url%>
+        data-href="<%=url%>"
+        data-annotation="none"
+      <% else %>
+        data-annotation="bubble"
+      <% end %>
+      ></g:plusone>
 
     </li>
 
@@ -29,22 +53,8 @@
       <span  class='st_email_vcount' displayText='Email'></span>
     </li>
 
-    <li>
+<!--     <li>
       <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
       <script type="IN/Share"  data-counter="top" data-title="Paylaş"></script>
-    </li>
-
-    <li>
-      <!-- Place this tag where you want the su badge to render -->
-      <su:badge layout="5"></su:badge>
-
-      <!-- Place this snippet wherever appropriate -->
-      <script type="text/javascript">
-        (function() {
-          var li = document.createElement('script'); li.type = 'text/javascript'; li.async = true;
-          li.src = 'https://platform.stumbleupon.com/1/widgets.js';
-          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(li, s);
-        })();
-      </script>
-    </li>
+    </li> -->
   </ul>
