--- a/app/views/users/includes/_stats.html.erb
+++ b/app/views/users/includes/_stats.html.erb
@@ -10,7 +10,7 @@
   <!-- TODO(Yigit): Toplam Yapilan Bagis -->
   <li class="rc">
     <div class="label">Yaptığı Bağış:</div>
-    <div class="number">150 TL</div>
+    <div class="number"><%=@user.total_donated%> TL</div>
   </li>
 
   <% if @user.supports.length > 0  %>
